objects/ssot__CourseOffering__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AcademicSessionId__c</fullName>
        <label>Academic Session</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AcademicTermId__c</fullName>
        <label>Academic Term</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BusinessPeriodId__c</fullName>
        <label>Business Period</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CalendarPeriod__c</fullName>
        <label>Calendar Period</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EnrolleeCount__c</fullName>
        <label>Enrollee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EnrollmentCapacityQuantity__c</fullName>
        <label>Enrollment Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__HasLimitedCapacity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Limited Capacity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Course Offering Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__LearningCourseId__c</fullName>
        <label>Learning Course</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryFacultyId__c</fullName>
        <label>Primary Faculty</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SectionNumber__c</fullName>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__WaitlistCapacityQuantity__c</fullName>
        <label>Waitlist Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__WaitlistCount__c</fullName>
        <label>Waitlist Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817596795_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CourseOffering_AcademicSessionId_map_rel</label>
        <referenceTo>ssot__AcademicSession__dlm</referenceTo>
        <relationshipLabel>CourseOffering_AcademicSessionId_map_rel</relationshipLabel>
        <relationshipName>rel_1719817596795_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817598751_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CourseOffering_AcademicTermId_map_Ac_rel</label>
        <referenceTo>ssot__AcademicTerm__dlm</referenceTo>
        <relationshipLabel>CourseOffering_AcademicTermId_map_Ac_rel</relationshipLabel>
        <relationshipName>rel_1719817598751_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819885459_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CourseOffering_LearningCourseId_map__rel</label>
        <referenceTo>ssot__LearningCourse__dlm</referenceTo>
        <relationshipLabel>CourseOffering_LearningCourseId_map__rel</relationshipLabel>
        <relationshipName>rel_1719819885459_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>